# language-modeling-from-scratch

./: .gitignore  Agents.MD  README.md  quantization.ipynb
pytorch-examples/: pyproject.toml
pytorch-examples/src/pytorch_examples/: main.py
quantization/: loading_models_with_different_dtypes.ipynb  quantization_theory.ipynb  quantization_theory_helper.py  requirements.txt
quantization/model-optimizer/: =0.43.2  FP8_PTQ_Min-Max_Calibration.ipynb  LinkedIn_Article_Quantization.md  NVFP4_PTQ_Min-Max_Calibration.ipynb
quantization/model-optimizer/qat/: FP8_QAT.ipynb  output_executed_fp8_qat.ipynb  output_executed_nvfp4_qat.ipynb  qat.ipynb
quantization/unsloth/: FP8_QAT.ipynb  FP8_QAT_Article.md
